<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">


        <TableRow style="@style/TableRowStyle">

            <TextView
                android:id="@+id/product_name"
                style="@style/OverviewStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/book_title" />

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditTextFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_book_title"
                android:inputType="text" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TableRow style="@style/TableRowStyle">

            <TextView
                android:id="@+id/product_price"
                style="@style/OverviewStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/book_price" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditTextFieldStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/currency"
                    style="@style/CurrencyTextViewStyle"
                    tools:text="@string/currency" />
            </RelativeLayout>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TableRow style="@style/TableRowStyle">

            <TextView
                android:id="@+id/product_quantity"
                style="@style/OverviewStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/book_quantity" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditTextFieldStyle"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"/>

                <ImageButton
                    android:id="@+id/plusButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@+id/minusButton"
                    android:background="@mipmap/plus1" />

                <ImageButton
                    android:id="@+id/minusButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@mipmap/minus1" />

            </RelativeLayout>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TableRow style="@style/TableRowStyle">

            <TextView
                android:id="@+id/supplier_name"
                style="@style/OverviewStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/supplier_name" />
            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditTextFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_supplier_name"
                android:inputType="text" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TableRow style="@style/TableRowStyle">

            <TextView
                android:id="@+id/supplier_phone"
                style="@style/OverviewStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/supplier_phone_number" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditTextFieldStyle"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/fab"
                android:gravity="center_vertical"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />
    </TableLayout>

</ScrollView>